# winter

./: .gitignore  CLAUDE.md  LICENSE  README.md  SETUP_WINDOWS.md  pyproject.toml  winter-troubleshoot.bat  winter.bat  winter.vbs
.claude/: settings.local.json
config/: settings.yaml
config/characters/default/: character.yaml
config/characters/default/sprite/: README.md
config/characters/default/voicelines/: README.md
scripts/: bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  make-shortcut.ps1  make_app.sh  setup_voice.py  smoke_gui.py  update.ps1  update.sh  verify_camera.py  verify_micsource.py  verify_phase1.py  verify_phase2.py  verify_tts_thread.py  verify_visualizer.py
tests/: test_character.py  test_cursor_map.py  test_gestures.py  test_intents.py  test_localfacts.py  test_macos_control.py  test_router.py  test_sprite_art.py  test_tts.py  test_visualizer.py  test_voiceover.py  test_wakeword.py  test_youtube.py
winter/: __init__.py  __main__.py  app.py  assets.py  main.py  updater.py
winter/audio/: _chatterbox_worker.py  capture.py  micsource.py  sounds.py  stt.py  tts.py  tts_thread.py  voice_env.py  voiceover.py  wakeword.py
winter/brain/: intents.py  llm.py  localfacts.py  router.py  websearch.py  youtube.py
winter/config/: character.py  settings.py
winter/core/: events.py  state.py  worker.py
winter/system/: _control_windows.py  _cursor_macos.py  _cursor_windows.py  control.py  cursor.py  macos_control.py  osinfo.py  permissions.py
winter/ui/: character_dialog.py  settings_window.py  tray.py  visualizer.py  voiceover_dialog.py
winter/vision/: camera.py  cursor_map.py  gestures.py
