[project]
name = "winter"
version = "0.1.0"
description = "Winter — a local-first AI desktop assistant with voice, gestures, and switchable characters"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # UI
    "PyQt6>=6.7",
    # core
    "numpy",
    "pyyaml",
    # audio in/out
    "sounddevice",
    "soundfile",
    "webrtcvad-wheels",
    "soxr",                 # high-quality resampling for the mic capture path
    # wake word — offline keyword spotting
    "vosk",
    "onnxruntime",          # also used by piper-tts
    # speech-to-text
    "faster-whisper",
    # local LLM
    "ollama",
    # web search
    "ddgs",
    # vision
    "mediapipe>=0.10.18",
    "opencv-python",
    # text-to-speech — piper is the fast generic voice (always available);
    # chatterbox (voice cloning) is an optional extra, see below
    "piper-tts",
    # macOS system control + voice-processing mic capture (echo cancellation)
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices; sys_platform == 'darwin'",
    "pyobjc-framework-AVFoundation; sys_platform == 'darwin'",
    # Windows system control — output volume via the Core Audio API
    "pycaw; sys_platform == 'win32'",
    "comtypes; sys_platform == 'win32'",
]

[project.optional-dependencies]
# Chatterbox voice cloning — kept optional because its build dependencies
# (perth/pkuseg) need a C compiler and don't install cleanly on stock Windows.
# Install with:  uv pip install -e ".[voice-cloning]"
# Without it, Winter falls back to the fast Piper voice for every character.
voice-cloning = [
    "chatterbox-tts",
    "setuptools<81",   # perth still imports the legacy pkg_resources
]

[project.scripts]
winter = "winter.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["winter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.extra-build-dependencies]
# pkuseg (a chatterbox-tts dependency) needs numpy at build time but does
# not declare it — supply it so the sdist builds.
pkuseg = ["numpy"]
