[project]
name = "winter"
version = "0.1.0"
description = "Winter — a local-first AI desktop assistant with voice, gestures, and switchable characters"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # UI
    "PyQt6>=6.7",
    # core
    "numpy",
    "pyyaml",
    # audio in/out
    "sounddevice",
    "soundfile",
    "webrtcvad-wheels",
    "soxr",                 # high-quality resampling for the mic capture path
    "av",                   # PyAV — extract audio from uploaded video/audio clips
    # wake word — offline keyword spotting
    "vosk",
    "onnxruntime",          # also used by piper-tts
    # speech-to-text
    "faster-whisper",
    # local LLM
    "ollama",
    # web search
    "ddgs",
    # vision
    "mediapipe>=0.10.18",
    "opencv-python",
    # text-to-speech — piper is the fast generic voice (always available);
    # chatterbox (voice cloning) is an optional extra, see below
    "piper-tts",
    # macOS system control + voice-processing mic capture (echo cancellation)
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices; sys_platform == 'darwin'",
    "pyobjc-framework-AVFoundation; sys_platform == 'darwin'",
    # Windows system control — output volume via the Core Audio API
    "pycaw; sys_platform == 'win32'",
    "comtypes; sys_platform == 'win32'",
]

# Voice cloning (the Chatterbox engine) is deliberately NOT a dependency here.
# It runs in its own isolated environment, created by scripts/setup_voice.py,
# so its heavy version pins never collide with the main app's. Without it,
# Winter falls back to the fast Piper voice for every character.

[project.optional-dependencies]
# development extras — the test runner. Install with:  uv pip install -e ".[dev]"
dev = ["pytest"]

[project.scripts]
winter = "winter.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["winter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
